--- a/css/main.scss
+++ b/css/main.scss
@@ -11,7 +11,7 @@ body{
 }
 
 ::-webkit-scrollbar {
-    width: .4vw;
+    width: .5vw;
 }
 ::-webkit-scrollbar-track {
     background: transparent;
